fix bug 628389, r=standard8, fix offline fcc of sent folder to happen before updating sent folder, when open in ui