mailnews/imap/src/nsImapMailFolder.cpp
@@ -5344,16 +5344,13 @@ nsImapMailFolder::OnStopRunningUrl(nsIURI *aUrl, nsresult aExitCode)
               m_copyState->m_curIndex++;
               if (m_copyState->m_curIndex >= m_copyState->m_totalCount)
               {
+                nsCOMPtr<nsIUrlListener> saveUrlListener = m_urlListener;
                 if (folderOpen)
                 {
                   // This gives a way for the caller to get notified
                   // when the UpdateFolder url is done.
-                  nsCOMPtr <nsIUrlListener> saveUrlListener = m_urlListener;
                   if (m_copyState->m_listener)
                     m_urlListener = do_QueryInterface(m_copyState->m_listener);
-
-                  UpdateFolder(msgWindow);
-                  m_urlListener = saveUrlListener;
                 }
                 if (m_copyState->m_msgWindow && m_copyState->m_undoMsgTxn)
                 {
@@ -5363,6 +5360,11 @@ nsImapMailFolder::OnStopRunningUrl(nsIURI *aUrl, nsresult aExitCode)
                     txnMgr->DoTransaction(m_copyState->m_undoMsgTxn);
                 }
                 (void) OnCopyCompleted(m_copyState->m_srcSupport, aExitCode);
+                if (folderOpen)
+                {
+                  UpdateFolderWithListener(msgWindow, m_urlListener);
+                  m_urlListener = saveUrlListener;
+                }
               }
             }
             else
